--- a/package.json
+++ b/package.json
@@ -310,7 +310,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "json-server --watch db.json --port 5000"
+    "server": "json-server --watch db.json"
   },
   "keywords": ["feedback", "vite", "react"],
   "author": "Ayodele Leom",
